# ms5611-i2c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: Makefile
example/src/: main.c
src/: ms5611-i2c.c  ms5611-i2c.h
